# acq-cuda

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmarks/: gemm_benchmark.cu
include/: concepts.hpp  matrix.hpp  utils.hpp
include/gemm/: check.hpp  sgemm.hpp
scripts/: filter-compile-commands-clangd.sh  plot_gemm_benchmark.py  run_gemm_benchmark.sh
src/: cu3.cu
src/cutlass/: cut1.cu
src/gemm/: registry.cu  sgemm_async_tiling.cu  sgemm_cublas.cu  sgemm_cutlass.cu  sgemm_naive.cu  sgemm_smem.cu  sgemm_thread_tiling.cu  sgemm_tiling.cu  sgemm_warp_tiling.cu  sgemm_wmma_tf32.cu
src/misc/: cu1.cu  cu2.cu  cu3.cu  cu4.cu
tests/: gemm_correctness_test.cu  matrix_test.cpp
tools/profile/: gemm_profile.cu  profile_gemm_ncu.sh
tools/scripts/: filter-compile-commands-clangd.sh  plot_gemm_benchmark.py  run_gemm_benchmark.sh  run_gemm_correctness.sh
